deploy maybe yo

--- a/school/src/main/resources/application.properties
+++ b/school/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # For PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/ourrest
-spring.datasource.username=postgres
-spring.datasource.password=${MYDBPASSWORD:password}
+spring.datasource.url=jdbc:postgresql://localhost:5432/school
+spring.datasource.username=gw
+spring.datasource.password=${MYDBPASSWORD:gitstatus}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # For H2
